--- a/cloudflare/index.html
+++ b/cloudflare/index.html
@@ -67,7 +67,7 @@
                 </svg>
                 <p class="ml-4">
                   如有疑问，请参考
-                  <a href="https://github.com/adams549659584/go-proxy-bingai/issues/81" target="_blank"
+                  <a href="https://www.baidu.com" target="_blank"
                     class="text-sky-500 hover:text-sky-600">issues #81</a>
                 </p>
               </li>
@@ -76,7 +76,7 @@
           <div class="pt-8 text-base font-semibold leading-7">
             <p class="text-gray-600 overflow-hidden">导航地址：<a href="https://www.baidu.com"
                 target="_blank"
-                class="text-sky-500 hover:text-sky-600">https://github.com/adams549659584/go-proxy-bingai</a></p>
+                class="text-sky-500 hover:text-sky-600">https://www.baidu.com</a></p>
           </div>
         </div>
       </div>
