--- a/cloudflare/index.html
+++ b/cloudflare/index.html
@@ -10,7 +10,7 @@
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover" />
   <meta name="referrer" content="origin-when-cross-origin" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <title>BingAI - 聊天</title>
+  <title>GPTAI - 聊天</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-MM5J5X8QQC"></script>
@@ -41,7 +41,7 @@
       class="relative bg-white px-6 pb-8 pt-10 shadow-xl ring-1 ring-gray-900/5 sm:mx-auto sm:max-w-lg sm:rounded-lg sm:px-10 lg:max-w-3xl">
       <div class="mx-auto max-w-3xl">
         <div class="flex justify-center">
-          <img src="/github/frontend/public/img/logo.svg" class="h-24" alt="BingAI" />
+          <img src="/github/frontend/public/img/logo.svg" class="h-24" alt="GPTAI" />
         </div>
         <div class="mt-6 text-center text-3xl text-gray-600">聊天服务器已部署完成</div>
         <div class="divide-y divide-gray-300/50">
