--- a/cloudflare/index.html
+++ b/cloudflare/index.html
@@ -5,7 +5,7 @@
   <meta content="text/html; charset=utf-8" http-equiv="content-type" />
   <link rel="icon" type="image/svg+xml" href="/github/frontend/public/img/logo.svg" />
   <meta content="yes" name="apple-mobile-web-app-capable" />
-  <link rel="apple-touch-icon" href="/github/frontend/public/img/pwa/logo-192.png">
+  <link rel="apple-touch-icon" href="/github/frontend/public/img/logo.svg">
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover" />
   <meta name="referrer" content="origin-when-cross-origin" />
