--- a/web/compose.html
+++ b/web/compose.html
@@ -11,7 +11,7 @@
     content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
   <meta name="referrer" content="origin-when-cross-origin" />
   <link rel="icon" href="./img/compose.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="./img/pwa/logo-192.png">
+  <link rel="apple-touch-icon" href="./img/logo.svg">
   <meta content="yes" name="apple-mobile-web-app-capable" />
   <link rel="mask-icon" href="./img/compose.svg" color="#FFFFFF">
   <meta name="msapplication-TileColor" content="#FFFFFF">
